work/nginx-ingress-controller/hello-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-product-svc
  namespace: ingress-nginx
spec:
  selector:
    app: hello-product
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  #type: LoadBalancer
  type: NodePort
