work/nginx-ingress-controller/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
  name: hello-ingress
  namespace: ingress-nginx

spec:
  tls:
  - hosts:
    - "k11"
    secretName: tls-secret
  rules:
  - host: k11
    http:
      paths:
      - path: /users/*
        backend:
          serviceName: hello-user-svc
          servicePort: 80
      - path: /products/*
        backend:
          serviceName: hello-product-svc
          servicePort: 80
